<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="characters">Characters</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="type">Type:</string>
    <string name="gender">Gender:</string>
    <string name="episode">Episode:</string>
    <string name="created">Created:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charactersimage">charactersImage</string>
</resources>