<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:background="@color/colorBackdround">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/fl_image_main"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/image_style"
        android:elevation="8dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewCharacter"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/charactersimage"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewType"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelName"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_image_main"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewName"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_image_main" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelStatus"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewStatus"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelSpecies"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/species"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewSpecies"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelType"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelGender"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewGender"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelEpisode"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/episode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreated" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewEpisode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EpisodeStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelEpisode" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLabelCreated"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/created"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelGender" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewCreated"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />
</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
